--- a/fdts/stm32mp13-bl2.dtsi
+++ b/fdts/stm32mp13-bl2.dtsi
@@ -1,22 +1,12 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR BSD-3-Clause)
 /*
- * Copyright (C) STMicroelectronics 2022 - All Rights Reserved
+ * Copyright (C) STMicroelectronics 2020 - All Rights Reserved
  */
-
-/omit-if-no-ref/ &i2c4_pins_a;
-/omit-if-no-ref/ &sdmmc1_b4_pins_a;
-/omit-if-no-ref/ &sdmmc1_clk_pins_a;
-/omit-if-no-ref/ &sdmmc2_b4_pins_a;
-/omit-if-no-ref/ &sdmmc2_clk_pins_a;
-/omit-if-no-ref/ &uart4_pins_a;
-/omit-if-no-ref/ &uart8_pins_a;
-/omit-if-no-ref/ &usart1_pins_a;
 
 / {
 	aliases {
 #if !STM32MP_EMMC && !STM32MP_SDMMC
 		/delete-property/ mmc0;
-		/delete-property/ mmc1;
 #endif
 	};
 
@@ -41,6 +31,13 @@
 #if !STM32MP_USB_PROGRAMMER
 		/delete-node/ usbphyc@5a006000;
 #endif
+
+		pinctrl@50002000 {
+#if !STM32MP_EMMC && !STM32MP_SDMMC
+			/delete-node/ sdmmc1-b4-0;
+			/delete-node/ sdmmc2-b4-0;
+#endif
+		};
 	};
 
 	/*
@@ -76,7 +73,10 @@
 		/* Disable authentication for development */
 		disable_auth = <0x0>;
 
-		/* Use SRAM2 to manage the mbedTLS heap */
+		/*
+		 * The following two entries are placeholders for Mbed TLS
+		 * heap information.
+		 */
 		mbedtls_heap_addr = <0x0 0x30004000>; /* SRAM2_BASE */
 		mbedtls_heap_size = <0x2000>; /* SRAM2_SIZE */
 	};
